# fund-test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cloud/: settings.py  urls.py
fund/: admin.py  apps.py  constants.py  forms.py  models.py  serializers.py  urls.py  views.py
fund/api/: api_views.py
fund/migrations/: 0001_initial.py
fund/templates/fund/: funds.html  upload.html
fund/tests/: factories.py  test_fund_api_viewset.py  test_handlers.py
templates/: base.html
